# trujkont

./: .clang-format  .deepsource.toml  .gitignore  Justfile  README.md  flake.nix  meson.build  todo.norg
include/glad/: gl.h
include/trujkont/: billboard.hpp  camera.hpp  commandline.hpp  shader.hpp  shader_program.hpp  texture.hpp
include/trujkont/font_renderer/: font_renderer.hpp
src/: billboard.cpp  callbacks.cpp  camera.cpp  commandline.cpp  delta_time.cpp  main.cpp  quad.cpp  texture.cpp  trujkont.cpp
src/shaders/: billboard.frag  billboard.vert
src/trujkont/: billboard.cpp  callbacks.hpp  camera.cpp  commandline.cpp  delta_time.hpp  main.cpp  quad.hpp  shader_program.hpp  texture.cpp  trujkont.cpp  trujkont.hpp
src/trujkont/billboard/: billboard.cpp  billboard.hpp
src/trujkont/callbacks/: callbacks.cpp
src/trujkont/camera/: camera.cpp  camera.hpp
src/trujkont/commandline/: commandline.cpp  commandline.hpp
src/trujkont/delta_time/: delta_time.cpp
src/trujkont/quad/: quad.cpp  quad.hpp
src/trujkont/shader_program/: shader_program.hpp
src/trujkont/texture/: texture.cpp  texture.hpp
subprojects/: libassert.wrap
